@@ -17,8 +17,6 @@
 
 package org.openqa.selenium.support.ui;
 
-import com.google.common.base.Throwables;
-import com.google.common.collect.ImmutableList;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
@@ -163,7 +161,7 @@ public class FluentWait<T> implements Wait<T> {
    * @see #ignoreAll(Collection)
    */
   public FluentWait<T> ignoring(Class<? extends Throwable> exceptionType) {
-    return this.ignoreAll(ImmutableList.<Class<? extends Throwable>>of(exceptionType));
+    return this.ignoreAll(List.<Class<? extends Throwable>>of(exceptionType));
   }
 
   /**
@@ -175,7 +173,7 @@ public class FluentWait<T> implements Wait<T> {
   public FluentWait<T> ignoring(
       Class<? extends Throwable> firstType, Class<? extends Throwable> secondType) {
 
-    return this.ignoreAll(ImmutableList.of(firstType, secondType));
+    return this.ignoreAll(List.of(firstType, secondType));
   }
 
   /**
@@ -245,7 +243,12 @@ public class FluentWait<T> implements Wait<T> {
         return e;
       }
     }
-    Throwables.throwIfUnchecked(e);
+    if (e instanceof Error) {
+      throw (Error) e;
+    }
+    if (e instanceof RuntimeException) {
+      throw (RuntimeException) e;
+    }
     throw new RuntimeException(e);
   }
 
